--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,429 @@
+:root {
+  --main-bg-color: #bfbfbf;
+  --button-bg-color: #fc814a;
+  --button-current-bg-color: #d96b38;
+  --card-bg-color: #e8e8e8;
+  --footer-bg-color: #a989a95e;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
+  max-width: 100vw;
 }
 
 * {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+#__next {
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--main-bg-color);
+}
+
+header {
+  width: 100%;
+}
+
+nav {
+  height: 64px;
+  display: flex;
+  width: 100%;
+  padding: 0 15px;
+}
+
+.navDataLogin {
+  background-color: var(--button-bg-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 1px 1px 1px 0px rgba(0, 0, 0, 0.2);
+  margin: 6px;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+ul {
+  display: flex;
+  justify-content: end;
+  list-style-type: none;
+  margin: 20px 15px;
+  padding: 0;
+  overflow: hidden;
+  width: 100%;
+  font-size: 16px;
+  gap: 10px;
+  line-height: 24px;
+  font-weight: 500;
+}
+
+li a {
+  color: #000;
+  cursor: pointer;
+}
+
+li a:hover {
+  color: #007fff;
+}
+
+li a {
+  text-decoration: none;
+}
+
+
+main {
+  margin: 64px auto;
+  min-height: calc(100vh - 314px);
+  max-width: 100%;
+  min-width: 1200px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  font-size: 16px;
+  font-weight: 500;
+  padding: 20px 15px;
+  height: 250px;
+  background-color: var(--footer-bg-color);
+  color: rgb(45, 16, 8);
+  width: 100%;
+}
+
+.aboutFooter {
+  width: 100%;
+}
+
+/* DASHBOARD */
+
+.cardContainer {
+  margin: 20px auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 100%;
+  max-width: 1200px;
+}
+
+.card {
+  flex: 33.3%;
+  width: 33.3%;
+  -webkit-filter: grayscale(0) blur(0);
+  filter: grayscale(0) blur(0);
+}
+
+.card:hover .cardContent,
+.card:hover .cardTitle,
+.card:hover .cardAction {
+  -webkit-filter: grayscale(100%) blur(3px);
+  filter: grayscale(100%) blur(3px);
+}
+
+.cardItem {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 20px;
+  width: calc(100% - 40px);
+  height: calc(100% - 40px);
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  background-color: var(--card-bg-color);
+  border-radius: 3px;
+}
+
+.cardTitle {
+  max-width: 100%;
+  overflow-x: hidden;
+  -webkit-filter: grayscale(0) blur(0);
+  filter: grayscale(0) blur(0);
+}
+
+.cardTitle h1 {
+  font-size: 20px;
+}
+
+.cardContent {
+  position: relative;
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  -webkit-filter: grayscale(0) blur(0);
+  filter: grayscale(0) blur(0);
+}
+
+
+.cardAction {
+  display: flex;
+  justify-content: space-between;
+  font-size: 14px;
+  font-weight: 500;
+  -webkit-filter: grayscale(0) blur(0);
+  filter: grayscale(0) blur(0);
+}
+
+.cardAction,
+.cardTitle {
+  padding: 20px 15px;
+}
+
+@media (max-width: 1200px) {
+  main {
+    max-width: 98%;
+    min-width: 100%;
   }
-  body {
-    color: white;
-    background: black;
+
+  .card {
+    flex: 100%;
   }
+}
+
+.cardInfo {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  color: transparent;
+  background: rgba(26, 188, 156, 0);
+  padding: 10px;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  transition: .3s ease-in-out;
+  -webkit-transition: .3s ease-in-out;
+}
+
+.cardInfo:hover {
+  background: rgba(26, 188, 156, 0.85);
+  color: rgba(0, 0, 0, 0.86);
+}
+
+.cardInfo:hover div {
+  visibility: visible;
+}
+
+.cardInfo p {
+  text-align: left;
+  max-height: 40%;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 4;
+  font-size: 18px;
+  width: 100%;
+  padding: 0 15px;
+  margin: 4px 0px;
+
+}
+
+.cardInfo p b {
+  font-size: 22px;
+}
+
+.cardInfoAction {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  padding: 8px 15px;
+  visibility: hidden;
+}
+
+.cardActionLogin button,
+.navLoginCardAction button,
+.navLoginCardText button,
+.cardInfoAction button {
+  background-color: var(--button-bg-color);
+  border: none;
+  border-radius: 5px;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 27px;
+  line-height: 30px;
+  max-height: 60px;
+  cursor: pointer;
+}
+
+.btnSmall {
+  line-height: 20px !important;
+  padding: 10px 16px !important;
+  font-size: 22px !important;
+}
+
+.fullWith {
+  width: 100% !important;
+}
+
+.currentPage {
+  display: flex;
+  gap: 12px;
+}
+
+.currentPage button {
+  background-color: var(--button-current-bg-color);
+  border: none;
+  border-radius: 5px;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 27px;
+  line-height: 30px;
+  max-height: 60px;
+  cursor: pointer;
+}
+
+.cardFormLogin form input[type=email],
+.cardFormLogin form input[type=number],
+.cardFormLogin form input[type=text] {
+  box-sizing: border-box;
+  padding: 12px 20px;
+  width: 80%;
+  margin: auto;
+  border: none;
+  border-bottom: 1px solid black;
+  font-size: 18px;
+}
+
+.w100 {
+  width: 100% !important;
+}
+
+
+.cardFormLogin form input[type=email]:focus,
+.cardFormLogin form input[type=text]:focus {
+  border: none;
+  border-bottom: 1px solid #555;
+}
+
+.cardFormLogin form button {
+  background-color: var(--button-bg-color);
+  border: none;
+  border-radius: 5px;
+  color: rgb(0, 0, 0);
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 27px;
+  line-height: 30px;
+  max-height: 60px;
+  cursor: pointer;
+}
+
+/* Login */
+
+.contentLoginController {
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(191, 191, 191, 0.97);
+}
+
+.loginController {
+  background-color: #ffffff;
+  padding: 15px;
+  width: 380px;
+  max-width: 100%;
+}
+
+.cardFormLogin {
+  padding: 15px 0;
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+}
+
+.cardFormLogin form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.cardTitleLogin {
+  height: 60px;
+  line-height: 60px;
+  font-size: 22px;
+}
+
+.cardActionLogin {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-top: 15px;
+}
+
+/* NavBar */
+
+.navLoginWindows {
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 10;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.navLoginCard {
+  background-color: #ffffff;
+  padding: 15px;
+  border-radius: 5px;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  width: 400px;
+  max-width: 100%;
+}
+
+.navLoginCardTitle {
+  font-size: 20px;
+  font-weight: bold;
+  border-bottom: 1px solid #ddd;
+  height: 40px;
+  line-height: 40px;
+}
+
+.navLoginCardText {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 20px 0;
+}
+
+.navLoginCardText p {
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.navLoginCardAction {
+  display: flex;
+  justify-content: end;
 }
